Updated so that the crucial margin-top rule applies to the main tag rather than the .jumbotron class, to fix overlap issues on all child pages.

--- a/initializr-bootstrap/css/main.css
+++ b/initializr-bootstrap/css/main.css
@@ -27,9 +27,12 @@ img.site-header {
     float: left;
 }
 
- .jumbotron {
-     margin-top: 50px;
- }
+/*
+ * We need the content to appear beneath (and not behind) the page header.
+ */
+main {
+    margin-top: 50px;
+}
 /*
  * This is not how I would normally do things, but
  * experimentation has led to the conclusion that
